finished specific content templates add gallery js/css plugin [photobox]

--- a/wp-content/themes/huskies-theme/less/header.less
+++ b/wp-content/themes/huskies-theme/less/header.less
@@ -96,7 +96,7 @@
 
     .nav > li.active > a,
     .nav > li.current_page_parent > a {
-      background-color: @green;
+      background-color: @successText;
       color: @white;
       text-shadow: 0 0.1rem 0 @black;
     }
