--- a/wp-content/themes/huskies-theme/less/content.less
+++ b/wp-content/themes/huskies-theme/less/content.less
@@ -2,6 +2,13 @@
   min-height: 40rem;
   padding: 2.5rem;
 
+  .archive_header h1 { 
+    font-family: @serifFontFamily; 
+    text-align: center;
+
+    small { font-family: @sansFontFamily; }
+  }
+
   article {
     &:nth-child(n+2) { margin-top: 5rem; }
     &:nth-child(n-2) { margin-bottom: 2.5rem; }
@@ -25,17 +32,41 @@
 
       .page-header {
         margin-bottom: 0;
+        position: relative;
 
-        h1 > a {
-          word-wrap: break-word;
-          color: @textColor;
-          text-shadow: @grayLight 0 0.1rem 0.25rem;
+        h1 { 
+          width: 90%;
 
-          &:hover {
-            text-decoration: none;
-            color: @linkColorHover;
+          > a {
+            word-wrap: break-word;
+            color: @textColor;
+            text-shadow: @grayLight 0 0.1rem 0.25rem;
+
+            &:hover {
+              text-decoration: none;
+              color: @linkColorHover;
+            }
           }
         } 
+
+        .post_format {
+          position: absolute;
+          top: 1rem;
+          right: 4%;
+          .transition(all 1s ease);
+          background-color: @gray;
+          padding: 1rem;
+          .border-radius(50%);
+          color: white;
+          font-size: 3rem;
+
+          &.icon-th:before { 
+            top: 0.2rem;
+            position: relative;
+          }
+
+          &:hover { background-color: @grayDarker }
+        }
       }
 
       .article_meta_tags, 
@@ -70,5 +101,70 @@
     }
 
     small { color: @grayLight; }
+
+    .article_content p { .clearfix(); }
+
+    &.format-status .article_content { 
+      padding: 1rem; 
+      .border-radius(0.5rem);
+      .box-shadow(inset 0 0 0.5rem 0.25rem #ededed);
+
+      p { margin: 1rem; }
+    }
+
+    &.format-gallery .article_content {
+      > div:last-of-type { margin-top: 1rem; }
+
+      .gallery {
+        text-align: center;
+        display: inline-block;
+
+        @margin: 2%;
+        @full: 100%;
+
+        .gallery-item { 
+          margin-left: @margin; 
+          float: left;
+
+          .gallery-icon {
+            display: block;
+            position: relative;
+            overflow: hidden;
+
+            &:hover .gallery-caption {
+              bottom: 0.4rem;
+            }
+
+            img {
+              width: 100%;
+              height: 100%;
+            }
+          }
+        }
+
+        &.gallery-columns-1 li { width: @full / 1 - @margin; }
+        &.gallery-columns-2 li { width: @full / 2 - @margin; }
+        &.gallery-columns-3 li { width: @full / 3 - @margin; }
+        &.gallery-columns-4 li { width: @full / 4 - @margin; }
+        &.gallery-columns-5 li { width: @full / 5 - @margin; }
+        &.gallery-columns-6 li { width: @full / 6 - @margin; }
+        &.gallery-columns-7 li { width: @full / 7 - @margin; }
+        &.gallery-columns-8 li { width: @full / 8 - @margin; }
+        &.gallery-columns-9 li { width: @full / 9 - @margin; }
+        &.gallery-columns-10 li { width: @full / 10 - @margin; }
+      }
+    }
+
+    &.format-video,
+    &.format-image,
+    &.format-status,
+    &.format-gallery {
+      .article_content { text-align: center; }
+    } 
+
+    &.post-password-required .article_content {
+      text-align: center;
+      input[type="password"] { margin-right: 0.5rem; }
+    }
   }
 }
