* fixed some minor issues in page template * customized some styling for contact and google maps plugin

--- a/wp-content/themes/huskies-theme/less/content.less
+++ b/wp-content/themes/huskies-theme/less/content.less
@@ -15,6 +15,19 @@
 
     .featured-post { text-align: center; }
 
+    &.page > header,
+    &.attachment > header {
+      margin-top: 3rem; 
+      h1 small { font-size: 1.5rem; }
+    }
+
+    &.attachment .full_width_attachment {
+      a {
+        display: block;
+        img { width: 100%; }
+      }
+    }
+
     header {
       margin-bottom: 2rem;
 
