--- a/wp-content/themes/huskies-theme/less/style.less
+++ b/wp-content/themes/huskies-theme/less/style.less
@@ -30,6 +30,7 @@ body {
 @import "content.less";
 @import "comments.less";
 @import "footer.less";
+@import "plugins.less";
 
 @import "./less/photobox.css";
 #pbOverlay .prevNext { .opacity(50); }
