--- a/wp-content/themes/huskies-theme/less/header.less
+++ b/wp-content/themes/huskies-theme/less/header.less
@@ -66,7 +66,8 @@
   top: -5rem;
   font-size: 2rem;
   width: 100%;
-
+  @media (max-width: 767px) { z-index: 100; }
+  
   .navbar {
     width: 66%;
 
