* fixed full width images overlapping * customized calendar plugin

--- a/wp-content/themes/huskies-theme/less/header.less
+++ b/wp-content/themes/huskies-theme/less/header.less
@@ -6,7 +6,7 @@
   .border-radius(0.5rem);
   margin-bottom: 1.5rem;
 
-  #disc {
+  #logo-disc {
     position: absolute;
     right: 5rem;
     top: -5.7rem;
@@ -15,13 +15,13 @@
     &.expand { .translate(3rem, 0rem); }
   }
 
-  #head {
+  #logo-head {
     position: absolute;
     top: -12rem;
     right: -11rem;
   }
 
-  #body {
+  #logo-body {
     position: absolute;
     right: -10.75rem;
     top: -0.15rem;
