--- a/wp-content/themes/huskies-theme/less/content.less
+++ b/wp-content/themes/huskies-theme/less/content.less
@@ -10,6 +10,8 @@
   }
 
   article {
+    position: relative;
+    
     &:nth-child(n+2) { margin-top: 5rem; }
     &:nth-child(n-2) { margin-bottom: 2.5rem; }
 
@@ -27,6 +29,8 @@
         img { width: 100%; }
       }
     }
+
+    #startPhoto img { margin: 0; }
 
     header {
       margin-bottom: 2rem;
