--- a/wp-content/themes/huskies-theme/less/plugins.less
+++ b/wp-content/themes/huskies-theme/less/plugins.less
@@ -62,3 +62,154 @@
     img { margin: 0; }
   }
 }
+
+.one_cal_event {
+  dl {
+    margin-top: 0;
+
+    dt { 
+      width: 3rem; 
+      height: 3rem;
+
+      i {
+        width: 100%;
+        height: 100%;
+        font-size: 2rem;
+      }
+    }
+
+    dd {
+      margin-left: 3rem;
+      min-height: 2.5rem;
+      display: table-cell;
+      vertical-align: middle;
+      height: 2.5rem;
+    }
+  }
+}
+
+.gce-page-grid {
+  .gce-calendar {
+    border: none;
+
+    .gce-caption {
+      margin-bottom: 1rem;
+
+      .gce-change-month {
+        font-size: 3rem;
+
+        &:hover { text-decoration: none; }
+      }
+
+      .gce-month-title { font-size: 2rem; }
+    }
+
+    th,
+    td { 
+      border: none; 
+      .transition(all 0.25s ease);
+      .border-radius(0.5rem);
+    }
+
+    th { 
+      border-bottom: 0.1rem solid @grayLight; 
+      color: @black;
+    }
+
+    td.gce-today { color: @textColor; }
+
+    td.gce-has-events {
+      color: @successText;
+      &:hover { background-color: @grayLight; }
+
+      > .contentWrapper {
+        display: table;
+        width: 100%;
+        height: 100%;
+
+        > span {
+          display: table-cell;
+          vertical-align: middle;
+          text-align: center;
+        }
+      }
+      
+      > .popover {
+        color: @textColor;
+        cursor: default;
+        @media (max-width: 767px) { width: 12.5rem; }
+
+        .popover-title { text-align: center; }
+        .popover-content {
+          max-height: 35rem;
+          @media (max-width: 767px) { max-height: 15rem; }
+          overflow-x: hidden;
+          overflow-y: scroll;
+          padding: 0;
+
+          ul {
+            margin: 0;
+
+            li { 
+              list-style-type: none; 
+
+              .one_cal_event_tooltip {
+                border-top: 0.1rem solid @grayLight;
+                padding: 0 1rem;
+
+                .page-header { 
+                  margin-top: 0;
+                  margin-bottom: 1rem;
+
+                  h5 { font-size: 2rem; }
+                }
+
+                dt,
+                dd { 
+                  display: block;
+                  height: auto;
+                  margin-bottom: 1rem;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.gce-list {
+  margin-left: 0.5rem;
+  > li { list-style-type: none; }
+  ul { margin-left: 1rem !important; }
+
+  .one_cal_event_list {
+    padding: 0.5rem;
+    box-shadow: inset 0 0 15rem 0.25rem @grayDarker;
+    border-radius: 0.5rem;
+    margin: 1rem 0;
+
+    *[class^="icon"] { 
+      color: @grayLight; 
+      text-shadow: @black 0 0.1rem 0;
+    }
+
+    .page-header { 
+      padding-bottom: 0; 
+      margin: 0;
+      margin-bottom: 0.5rem;
+    }
+
+    .cal_more_link {
+      float: right;
+      font-size: 2rem;
+
+      &:hover { 
+        text-decoration: none; 
+        color: @successText;
+      }
+      & + dl { width: 90%; }
+    }
+  }
+}
