--- a/wp-content/themes/huskies-theme/less/statics.less
+++ b/wp-content/themes/huskies-theme/less/statics.less
@@ -19,6 +19,10 @@ h1, h2, h3, h4, h5 {
 *.serif { font-family: @serifFontFamily; }
 *.sans { font-family: @sansFontFamily; }
 
+.img-polaroid {
+  padding: 0.5%;
+}
+
 .tooltip {
   font-size: 1.5rem;
 }
@@ -70,7 +74,7 @@ iframe {
 
 img {
   max-width: 99%;
-  
+
   &.alignleft,
   &.alignright,
   &.aligncenter,
