added home button to main menu added user identification for logged and not logged in added last three posts and next three events to start page

--- a/wp-content/themes/huskies-theme/less/content.less
+++ b/wp-content/themes/huskies-theme/less/content.less
@@ -30,8 +30,6 @@
       }
     }
 
-    #startPhoto img { margin: 0; }
-
     header {
       margin-bottom: 2rem;
 
@@ -81,8 +79,8 @@
             top: 0.2rem;
             position: relative;
           }
-
-          &:hover { background-color: @grayDarker }
+          
+          &:hover { background-color: @grayDarker; }
         }
       }
 
