--- a/wp-content/themes/huskies-theme/less/plugins.less
+++ b/wp-content/themes/huskies-theme/less/plugins.less
@@ -201,6 +201,8 @@
       margin-bottom: 0.5rem;
     }
 
+    .dl-horizontal { float: left; }
+
     .cal_more_link {
       float: right;
       font-size: 2rem;
