--- a/wp-content/themes/huskies-theme/less/statics.less
+++ b/wp-content/themes/huskies-theme/less/statics.less
@@ -19,9 +19,9 @@ h1, h2, h3, h4, h5 {
 *.serif { font-family: @serifFontFamily; }
 *.sans { font-family: @sansFontFamily; }
 
-.img-polaroid {
-  padding: 0.5%;
-}
+// .img-polaroid {
+//   padding: 0.5%;
+// }
 
 .tooltip {
   font-size: 1.5rem;
