--- a/wp-content/themes/huskies-theme/less/style.less
+++ b/wp-content/themes/huskies-theme/less/style.less
@@ -28,6 +28,7 @@ body {
 @import "statics.less";
 @import "header.less";
 @import "content.less";
+@import "frontpage.less";
 @import "comments.less";
 @import "footer.less";
 @import "plugins.less";
